adding compress image and fixed resurge image product

--- a/ui/index.html
+++ b/ui/index.html
@@ -24,8 +24,15 @@
         rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap"
     /></noscript>
-    <link rel="preload" href="icons asset/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="icons asset/css/all.min.css" /></noscript>
+    <link
+      rel="preload"
+      href="icons asset/css/all.min.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript
+      ><link rel="stylesheet" href="icons asset/css/all.min.css"
+    /></noscript>
     <link
       rel="preload"
       href="css/animate.css"
@@ -187,9 +194,6 @@
             <li class="nav-item">
               <a href="./html/contact.html" class="nav-link">Contact</a>
             </li>
-            <li class="nav-item">
-              <a href="#appointment-section" class="nav-link">Consultation</a>
-            </li>
           </ul>
         </div>
       </div>
@@ -200,7 +204,7 @@
       <div class="home-slider owl-carousel js-fullheight">
         <div
           class="slider-item js-fullheight"
-          style="background-image: url(images/bg_1.jpg);"
+          style="background-image: url(images/fruit-for-person-who-want-to-lose-weight.jpg);"
         >
           <div class="overlay"></div>
           <div class="container">
@@ -227,7 +231,7 @@
 
         <div
           class="slider-item js-fullheight"
-          style="background-image: url(images/bg_2.jpg);"
+          style="background-image: url(images/weight-loss-fruit-should-you-take.jpg);"
         >
           <div class="overlay"></div>
           <div class="container">
@@ -254,7 +258,7 @@
 
         <div
           class="slider-item js-fullheight"
-          style="background-image: url(images/bg_3.jpg);"
+          style="background-image: url(images/juice-for-weight-loss.jpg);"
         >
           <div class="overlay"></div>
           <div class="container">
@@ -292,7 +296,9 @@
             <div class="d-block services-wrap text-center">
               <div
                 class="img"
-                style="background-image: url(images/services-1.jpg);"
+                style="
+                  background-image: url(images/best-exercises-for-weight-loss.jpg);
+                "
               ></div>
               <div class="media-body p-2 mt-3">
                 <h3 class="heading">The 8 Best Exercises for Weight Loss</h3>
@@ -318,7 +324,9 @@
             <div class="d-block services-wrap text-center">
               <div
                 class="img"
-                style="background-image: url(images/services-2.jpg);"
+                style="
+                  background-image: url(images/how-to-meal-plan-for-weight-loss.jpg);
+                "
               ></div>
               <div class="media-body p-2 mt-3">
                 <h3 class="heading">
@@ -347,7 +355,7 @@
             <div class="d-block services-wrap text-center">
               <div
                 class="img"
-                style="background-image: url(images/services-3.jpg);"
+                style="background-image: url(images/diet-plan-for-weight-loss.jpg);"
               ></div>
               <div class="media-body p-2 mt-3">
                 <h3 class="heading">
@@ -379,7 +387,7 @@
         <div class="row no-gutters">
           <div
             class="col-md-5 p-md-5 img img-2 mt-5 mt-md-0"
-            style="background-image: url(images/coach-1.jpg);"
+            style="background-image: url(images/weight-loss-fruit-recipes.jpg);"
           ></div>
           <div class="col-md-7 wrap-about py-4 py-md-5 ftco-animate">
             <div class="heading-section mb-5">
@@ -410,7 +418,7 @@
               <div class="founder d-flex align-items-center mt-5">
                 <div
                   class="img"
-                  style="background-image: url(images/coach-1.jpg);"
+                  style="background-image: url(images/weight-loss-fruit-recipes.jpg);"
                 ></div>
                 <div class="text pl-3">
                   <h3 class="mb-0">Cythia Hunter</h3>
@@ -658,7 +666,9 @@
                     <div class="stories-wrap d-md-flex">
                       <div
                         class="img"
-                        style="background-image: url(images/ballet.jpg);"
+                        style="
+                          background-image: url(images/weight-loss-before-and-after-women-motivation.jpg);
+                        "
                       ></div>
                       <div
                         class="text p-4 py-xl-5 px-xl-5 d-flex align-items-center"
@@ -712,7 +722,7 @@
                     <div class="stories-wrap d-md-flex">
                       <div
                         class="img"
-                        style="background-image: url(images/Pileggi.jpg);"
+                        style="background-image: url(images/before-and-after-weight-loss-photo.jpg);"
                       ></div>
                       <div
                         class="text p-4 py-xl-5 px-xl-5 d-flex align-items-center"
@@ -772,7 +782,7 @@
                     <div class="stories-wrap d-md-flex">
                       <div
                         class="img"
-                        style="background-image: url(images/shenk.jpg);"
+                        style="background-image: url(images/women-before-and-after-weight-loss-pic.jpg);"
                       ></div>
                       <div
                         class="text p-4 py-xl-5 px-xl-5 d-flex align-items-center"
@@ -833,7 +843,7 @@
 
     <section
       class="ftco-intro"
-      style="background-image: url(images/bg_1.jpg);"
+      style="background-image: url(images/fruit-for-person-who-want-to-lose-weight.jpg);"
       data-stellar-background-ratio="0.5"
     >
       <div class="overlay"></div>
@@ -873,7 +883,7 @@
                 href="https://www.healthline.com/nutrition/26-evidence-based-weight-loss-tips"
                 target="_blank"
                 class="block-20 rounded"
-                style="background-image: url('images/female.jpg');"
+                style="background-image: url('images/weight-loss-tips.jpg');"
               >
               </a>
               <div class="text mt-3">
@@ -902,7 +912,7 @@
                 href="https://www.healthline.com/nutrition/weight-loss-motivation-tips"
                 target="_blank"
                 class="block-20 rounded"
-                style="background-image: url('images/motivation.jpg');"
+                style="background-image: url('images/ways-to-motivate-yourself-to-loss-weight.jpg');"
               >
               </a>
               <div class="text mt-3">
@@ -931,7 +941,7 @@
                 href="https://www.healthline.com/nutrition/6-proven-ways-to-lose-belly-fat"
                 target="_blank"
                 class="block-20 rounded"
-                style="background-image: url('images/belly-fat.jpg');"
+                style="background-image: url('images/ways-to-lose-belly-fat.jpg');"
               >
               </a>
               <div class="text mt-3">
