--- a/ui/html/about.html
+++ b/ui/html/about.html
@@ -24,8 +24,15 @@
         rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap"
     /></noscript>
-    <link rel="preload" href="../icons asset/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="../icons asset/css/all.min.css" /></noscript>
+    <link
+      rel="preload"
+      href="../icons asset/css/all.min.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript
+      ><link rel="stylesheet" href="../icons asset/css/all.min.css"
+    /></noscript>
 
     <link
       rel="preload"
@@ -188,9 +195,6 @@
             <li class="nav-item">
               <a href="./contact.html" class="nav-link">Contact</a>
             </li>
-            <li class="nav-item">
-              <a href="#appointment-section" class="nav-link">Consultation</a>
-            </li>
           </ul>
         </div>
       </div>
@@ -199,7 +203,7 @@
 
     <section
       class="hero-wrap hero-wrap-2"
-      style="background-image: url('../images/bg_2.jpg');"
+      style="background-image: url('../images/weight-loss-fruit-should-you-take.jp'); background-color: #6e6e6e;"
       data-stellar-background-ratio="0.5"
     >
       <div class="overlay"></div>
@@ -224,7 +228,7 @@
         <div class="row no-gutters">
           <div
             class="col-md-5 p-md-5 img img-2 mt-5 mt-md-0"
-            style="background-image: url(../images/coach-1.jpg);"
+            style="background-image: url(../images/weight-loss-fruit-recipes.jpg);"
           ></div>
           <div class="col-md-7 wrap-about py-4 py-md-5 ftco-animate">
             <div class="heading-section mb-5">
@@ -255,7 +259,7 @@
               <div class="founder d-flex align-items-center mt-5">
                 <div
                   class="img"
-                  style="background-image: url(../images/coach-1.jpg);"
+                  style="background-image: url(../images/weight-loss-fruit-recipes.jpg);"
                 ></div>
                 <div class="text pl-3">
                   <h3 class="mb-0">Cythia Hunter</h3>
@@ -404,7 +408,7 @@
 
     <section
       class="ftco-intro"
-      style="background-image: url(../images/bg_1.jpg);"
+      style="background-image: url(../images/fruit-for-person-who-want-to-lose-weight.jpg);"
       data-stellar-background-ratio="0.5"
       id="appointment-bonus-section"
     >
