--- a/ui/html/blog.html
+++ b/ui/html/blog.html
@@ -196,7 +196,7 @@
 
     <section
       class="hero-wrap hero-wrap-2"
-      style="background-image: url('../images/bg_2.jpg');"
+      style="background-image: url('../images/weight-loss-fruit-should-you-take.jp'); background-color: #6e6e6e;"
       data-stellar-background-ratio="0.5"
     >
       <div class="overlay"></div>
@@ -225,7 +225,7 @@
                 href="https://www.healthline.com/nutrition/healthy-eating-tips"
                 target="_blank"
                 class="block-20 rounded img-2"
-                style="background-image: url('../images/woman-eating.jpg');"
+                style="background-image: url('../images/Simple-Tips-to-Make-Your-Diet-Healthier.jpg');"
               >
               </a>
               <div class="text mt-3">
@@ -266,7 +266,7 @@
                 href="https://www.healthline.com/nutrition/ways-to-prevent-stress-eating-when-youre-stuck-at-home"
                 target="_blank"
                 class="block-20 rounded img-2"
-                style="background-image: url('../images/woman-home.jpg');"
+                style="background-image: url('../images/Ways-to-Prevent-Stress-Eating-When-You’re-Stuck-at-Home.jpg');"
               >
               </a>
               <div class="text mt-3">
@@ -308,7 +308,7 @@
                 href="https://www.healthline.com/nutrition/how-to-lose-weight-as-fast-as-possible"
                 target="_blank"
                 class="block-20 rounded img-2"
-                style="background-image: url('../images/woman-stand.jpg');"
+                style="background-image: url('../images/how-to-loss-weight-step-by-step.jpg');"
               >
               </a>
               <div class="text mt-3">
@@ -350,7 +350,7 @@
                 href="https://www.healthline.com/nutrition/walking-for-weight-loss"
                 target="_blank"
                 class="block-20 rounded img-2"
-                style="background-image: url('../images/couple-walking.jpg');"
+                style="background-image: url('../images/How-Walking-Can-Help-You-Lose-Weight-and-Belly-Fat.jpg');"
               >
               </a>
               <div class="text mt-3">
@@ -391,7 +391,7 @@
                 href="https://www.healthline.com/nutrition/13-benefits-of-yoga"
                 target="_blank"
                 class="block-20 rounded img-2"
-                style="background-image: url('../images/legs-crossed.jpg');"
+                style="background-image: url('../images/Benefits-of-Yoga-That-Are-Supported-by-Science.jpg');"
               >
               </a>
               <div class="text mt-3">
@@ -432,7 +432,7 @@
                 href="https://www.healthline.com/nutrition/protein-shake-before-or-after-workout#exercise-and-protein"
                 target="_blank"
                 class="block-20 rounded img-2"
-                style="background-image: url('../images/protein-shake.jpg');"
+                style="background-image: url('../images/Should-You-Have-a-Protein-Shake-Before-or-After-Your-Workout.jpg');"
               >
               </a>
               <div class="text mt-3">
@@ -525,7 +525,7 @@
               <div class="block-21 mb-4 d-flex">
                 <a
                   class="blog-img mr-4"
-                  style="background-image: url(../images/woman-running.jpg);"
+                  style="background-image: url(../images/Working-Out-While-Sick.jpg);"
                 ></a>
                 <div class="text">
                   <h3 class="heading">
@@ -553,7 +553,7 @@
               <div class="block-21 mb-4 d-flex">
                 <a
                   class="blog-img mr-4"
-                  style="background-image: url(../images/PreWorkout.jpg);"
+                  style="background-image: url(../images/Pre-Workout-Nutrition-What-to-Eat-Before-a-Workout.jpg);"
                 ></a>
                 <div class="text">
                   <h3 class="heading">
@@ -581,7 +581,7 @@
               <div class="block-21 mb-4 d-flex">
                 <a
                   class="blog-img mr-4"
-                  style="background-image: url(../images/image_3.jpg);"
+                  style="background-image: url(../images/Foods-That-Are-Super-Healthy.jpg);"
                 ></a>
                 <div class="text">
                   <h3 class="heading">
