--- a/ui/html/resurge-review.html
+++ b/ui/html/resurge-review.html
@@ -56,7 +56,7 @@
       <div class="desc container">
         <h1 class="show-mobile headline-title">what is resurge Supplement</h1>
         <img
-          src="../images/Resurge 6 Bottles.png"
+          src="../images/Resurge 6 Bottles Best Value.png"
           alt="resurge supplement 6 bottles"
         />
         <div class="detail">
