fixing website link

--- a/ui/html/blog.html
+++ b/ui/html/blog.html
@@ -159,7 +159,7 @@
           <a
             class="navbar-brand"
             title="weight loss and health motivation"
-            href="index.html"
+            href="https://www.weightlossandhealthmotivation.com/"
             ><img src="../images/my-logo1.png" alt="logo" class="img-logo"
           /></a>
           <button
@@ -177,7 +177,7 @@
         <div class="collapse navbar-collapse" id="ftco-nav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a href="../index.html" class="nav-link">Home</a>
+              <a href="https://www.weightlossandhealthmotivation.com/" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
               <a href="./about.html" class="nav-link">About</a>
@@ -205,7 +205,7 @@
           <div class="col-md-9 ftco-animate pb-5">
             <p class="breadcrumbs mb-2">
               <span class="mr-2"
-                ><a href="../index.html"
+                ><a href="https://www.weightlossandhealthmotivation.com/"
                   >Home <i class="ion-ios-arrow-forward"></i></a
               ></span>
               <span>Blog <i class="ion-ios-arrow-forward"></i></span>
@@ -684,7 +684,7 @@
             <div class="row">
               <div class="col-md-12 col-lg-8 mb-md-0 mb-4">
                 <h2 class="footer-heading">
-                  <a href="../index.html"
+                  <a href="https://www.weightlossandhealthmotivation.com/"
                     ><img
                       src="../images/my-logo1.png"
                       alt="logo"
