--- a/ui/html/disclaimer.html
+++ b/ui/html/disclaimer.html
@@ -15,8 +15,15 @@
         href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap"
     /></noscript>
 
-    <link rel="preload" href="../icons asset/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="../icons asset/css/all.min.css" /></noscript>
+    <link
+      rel="preload"
+      href="../icons asset/css/all.min.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript
+      ><link rel="stylesheet" href="../icons asset/css/all.min.css"
+    /></noscript>
 
     <link
       rel="preload"
@@ -149,7 +156,7 @@
           <a
             class="navbar-brand"
             title="weight loss and health motivation"
-            href="index.html"
+            href="https://www.weightlossandhealthmotivation.com/"
             ><img src="../images/my-logo1.png" alt="logo" class="img-logo"
           /></a>
           <button
@@ -167,7 +174,7 @@
         <div class="collapse navbar-collapse" id="ftco-nav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a href="../index.html" class="nav-link">Home</a>
+              <a href="https://www.weightlossandhealthmotivation.com/" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
               <a href="./about.html" class="nav-link">About</a>
@@ -185,15 +192,25 @@
 
     <div class="container privacy-terms">
       <h2 style="text-align: center;"><b>DISCLAIMER</b></h2>
-      <p>Last updated: 2020-04-14</p>
+      <p>Last updated: 2020-04-19</p>
       <p><b>WEBSITE DISCLAIMER</b></p>
-      <p>
+      <p class="desktop">
         The information provided by
         <b>weight loss and health motivation</b> (“Company”, “we”, “our”, “us”)
-        on <b>https://www.weightlossandhealthmotivation.com/</b> (the “Site”) is
-        for general informational purposes only. All information on the Site is
-        provided in good faith, however we make no representation or warranty of
-        any kind, express or implied, regarding the accuracy, adequacy,
+        on <b><a href="https://www.weightlossandhealthmotivation.com/">https://www.weightlossandhealthmotivation.com/</a></b> (the “Site”)
+        is for general informational purposes only. All information on the Site
+        is provided in good faith, however we make no representation or warranty
+        of any kind, express or implied, regarding the accuracy, adequacy,
+        validity, reliability, availability, or completeness of any information
+        on the Site.
+      </p>
+      <p class="mobile">
+        The information provided by
+        <b>weight loss and health motivation</b> (“Company”, “we”, “our”, “us”)
+        on <b><a href="https://www.weightlossandhealthmotivation.com/">https://www.weightlossandhealthmotivation <br> .com/</a></b> (the “Site”)
+        is for general informational purposes only. All information on the Site
+        is provided in good faith, however we make no representation or warranty
+        of any kind, express or implied, regarding the accuracy, adequacy,
         validity, reliability, availability, or completeness of any information
         on the Site.
       </p>
@@ -238,8 +255,16 @@
         consult with the appropriate professionals. We do not provide any kind
         of medical advice.
       </p>
-      <p>
-        Content published on https://www.weightlossandhealthmotivation.com/ is
+      <p class="desktop">
+        Content published on <a href="https://www.weightlossandhealthmotivation.com/">https://www.weightlossandhealthmotivation.com/ </a>is
+        intended to be used and must be used for informational purposes only. It
+        is very important to do your own analysis before making any decision
+        based on your own personal circumstances. You should take independent
+        medical advice from a professional or independently research and verify
+        any information that you find on our Website and wish to rely upon.
+      </p>
+      <p class="mobile">
+        Content published on <a href="https://www.weightlossandhealthmotivation.com/">https://www.weightlossandhealthmotivation <br>.com/</a>is
         intended to be used and must be used for informational purposes only. It
         is very important to do your own analysis before making any decision
         based on your own personal circumstances. You should take independent
@@ -256,28 +281,7 @@
         affiliate commission for any purchases or actions made by you on the
         affiliate websites using such links.
       </p>
-      <p><b>TESTIMONIALS DISCLAIMER</b></p>
-      <p>
-        The Site may contain testimonials by users of our products and/or
-        services. These testimonials reflect the real-life experiences and
-        opinions of such users. However, the experiences are personal to those
-        particular users, and may not necessarily be representative of all users
-        of our products and/or services. We do not claim, and you should not
-        assume that all users will have the same experiences.
-      </p>
-      <p>YOUR INDIVIDUAL RESULTS MAY VARY.</p>
-      <p>
-        The testimonials on the Site are submitted in various forms such as
-        text, audio and/or video, and are reviewed by us before being posted.
-        They appear on the Site verbatim as given by the users, except for the
-        correction of grammar or typing errors. Some testimonials may have been
-        shortened for the sake of brevity, where the full testimonial contained
-        extraneous information not relevant to the general public.
-      </p>
-      <p>
-        The views and opinions contained in the testimonials belong solely to
-        the individual user and do not reflect our views and opinions.
-      </p>
+
       <p><b>ERRORS AND OMISSIONS DISCLAIMER</b></p>
       <p>
         While we have made every attempt to ensure that the information
@@ -300,18 +304,36 @@
       </p>
 
       <p><b>LOGOS AND TRADEMARKS DISCLAIMER</b></p>
-      <p>
-        All logos and trademarks of third parties referenced on
-        https://www.weightlossandhealthmotivation.com/ are the trademarks and
+      <p class="desktop">
+        All logos and trademarks of third parties referenced on <a href="https://www.weightlossandhealthmotivation.com/">https://www.weightlossandhealthmotivation.com/</a> are the trademarks and
+        logos of their respective owners. Any inclusion of such trademarks or
+        logos does not imply or constitute any approval, endorsement or
+        sponsorship of weight loss and health motivation by such owners.
+      </p>
+      <p class="mobile">
+        All logos and trademarks of third parties referenced on <a href="https://www.weightlossandhealthmotivation.com/">https://www.weightlossandhealthmotivation <br>.com/</a> are the trademarks and
         logos of their respective owners. Any inclusion of such trademarks or
         logos does not imply or constitute any approval, endorsement or
         sponsorship of weight loss and health motivation by such owners.
       </p>
       <p><b>CONTACT US</b></p>
-      <p>
+      <p class="desktop">
         Should you have any feedback, comments, requests for technical support
         or other inquiries, please contact us by email:
-        <b>support@weightlossandhealthmotivation.com</b>.
+        <b
+          ><a href="mailto:support@weightlossandhealthmotivation.com"
+            >support@weightlossandhealthmotivation.com</a
+          ></b
+        >.
+      </p>
+      <p class="mobile">
+        Should you have any feedback, comments, requests for technical support
+        or other inquiries, please contact us by email:
+        <b
+          ><a href="mailto:support@weightlossandhealthmotivation.com"
+            >support@weightlossandhealthmotivation<br>.com</a
+          ></b
+        >.
       </p>
     </div>
     <footer class="footer">
@@ -361,7 +383,7 @@
             <div class="row">
               <div class="col-md-12 col-lg-8 mb-md-0 mb-4">
                 <h2 class="footer-heading">
-                  <a href="../index.html"
+                  <a href="https://www.weightlossandhealthmotivation.com/"
                     ><span
                       ><img
                         src="../images/my-logo1.png"
