--- a/ui/html/privacy-policy.html
+++ b/ui/html/privacy-policy.html
@@ -15,8 +15,15 @@
         href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap"
     /></noscript>
 
-    <link rel="preload" href="../icons asset/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="../icons asset/css/all.min.css" /></noscript>
+    <link
+      rel="preload"
+      href="../icons asset/css/all.min.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript
+      ><link rel="stylesheet" href="../icons asset/css/all.min.css"
+    /></noscript>
 
     <link
       rel="preload"
@@ -149,7 +156,7 @@
           <a
             class="navbar-brand"
             title="weight loss and health motivation"
-            href="index.html"
+            href="https://www.weightlossandhealthmotivation.com/"
             ><img src="../images/my-logo1.png" alt="logo" class="img-logo"
           /></a>
           <button
@@ -167,7 +174,7 @@
         <div class="collapse navbar-collapse" id="ftco-nav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a href="../index.html" class="nav-link">Home</a>
+              <a href="https://www.weightlossandhealthmotivation.com/" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
               <a href="./about.html" class="nav-link">About</a>
@@ -187,7 +194,7 @@
       <p>Effective date: 2020-04-14</p>
       <p>1. <b>Introduction</b></p>
       <p>Welcome to <b> weight loss and health motivation</b>.</p>
-      <p>
+      <p class="desktop">
         <b>weight loss and health motivation</b> (“us”, “we”, or “our”) operates
         <b
           ><a href="https://www.weightlossandhealthmotivation.com/"
@@ -196,11 +203,29 @@
         >
         (hereinafter referred to as <b>“Service”</b>).
       </p>
-      <p>
+      <p class="mobile">
+        <b>weight loss and health motivation</b> (“us”, “we”, or “our”) operates
+        <b
+          ><a href="https://www.weightlossandhealthmotivation.com/"
+            >https://www.weightlossandhealthmotivation<br>.com/</a
+          ></b
+        >
+        (hereinafter referred to as <b>“Service”</b>).
+      </p>
+      <p class="desktop">
         Our Privacy Policy governs your visit to
         <b
           ><a href="https://www.weightlossandhealthmotivation.com/"
             >https://www.weightlossandhealthmotivation.com/</a
+          ></b
+        >, and explains how we collect, safeguard and disclose information that
+        results from your use of our Service.
+      </p>
+      <p class="mobile">
+        Our Privacy Policy governs your visit to
+        <b
+          ><a href="https://www.weightlossandhealthmotivation.com/"
+            >https://www.weightlossandhealthmotivation<br>.com/</a
           ></b
         >, and explains how we collect, safeguard and disclose information that
         results from your use of our Service.
@@ -218,10 +243,17 @@
         (<b>“agreement”</b>).
       </p>
       <p>2. <b>Definitions</b></p>
-      <p>
+      <p class="desktop">
         <b>SERVICE</b> means the
         <a href="https://www.weightlossandhealthmotivation.com/"
           >https://www.weightlossandhealthmotivation.com/</a
+        >
+        website operated by weight loss and health motivation.
+      </p>
+      <p class="mobile">
+        <b>SERVICE</b> means the
+        <a href="https://www.weightlossandhealthmotivation.com/"
+          >https://www.weightlossandhealthmotivation<br>.com/</a
         >
         website operated by weight loss and health motivation.
       </p>
@@ -551,12 +583,21 @@
         posted on this page.
       </p>
       <p>17. <b>Contact Us</b></p>
-      <p>
+      <p class="desktop">
         If you have any questions about this Privacy Policy, please contact us
         by email:
         <b
           ><a href="mailto:support@weightlossandhealthmotivation.com"
             >support@weightlossandhealthmotivation.com</a
+          ></b
+        >.
+      </p>
+      <p class="mobile">
+        If you have any questions about this Privacy Policy, please contact us
+        by email:
+        <b
+          ><a href="mailto:support@weightlossandhealthmotivation.com"
+            >support@weightlossandhealthmotivation<br>.com</a
           ></b
         >.
       </p>
@@ -608,7 +649,7 @@
             <div class="row">
               <div class="col-md-12 col-lg-8 mb-md-0 mb-4">
                 <h2 class="footer-heading">
-                  <a href="../index.html"
+                  <a href="https://www.weightlossandhealthmotivation.com/"
                     ><span
                       ><img
                         src="../images/my-logo1.png"
