--- a/ui/html/resurge-review.html
+++ b/ui/html/resurge-review.html
@@ -15,7 +15,7 @@
     <header class="wrap">
       <div class="container">
         <div class="title">
-          <a href="../index.html" title="weight loss and health motivation"
+          <a href="https://www.weightlossandhealthmotivation.com/" title="weight loss and health motivation"
             ><img
               src="../images/my-logo1.png"
               alt="weight loss and health motivation logo"
@@ -149,7 +149,7 @@
     <footer class="footer-section">
       <div class="container footer-nav">
         <div class="footer-logo">
-          <a href="../index.html"
+          <a href="https://www.weightlossandhealthmotivation.com/"
             ><img
               src="../images/my-logo1.png"
               alt="weight loss and health motivation logo"
