--- a/ui/html/contact.html
+++ b/ui/html/contact.html
@@ -57,7 +57,7 @@
 		<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
 	    	<div class="mobile-nav container">
-          <a class="navbar-brand"title="weight loss and health motivation" href="index.html"
+          <a class="navbar-brand"title="weight loss and health motivation" href="https://www.weightlossandhealthmotivation.com/"
           ><img src="../images/my-logo1.png" alt="logo" class="img-logo"></a>
         <button
           class="navbar-toggler"
@@ -73,7 +73,7 @@
         </div>
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	        	<li class="nav-item"><a href="../index.html" class="nav-link">Home</a></li>
+	        	<li class="nav-item"><a href="https://www.weightlossandhealthmotivation.com/" class="nav-link">Home</a></li>
 	        	<li class="nav-item"><a href="./about.html" class="nav-link">About</a></li>
 	          <li class="nav-item"><a href="./blog.html" class="nav-link">Blog</a></li>
 	          <li class="nav-item active"><a href="./contact.html" class="nav-link">Contact</a></li>
@@ -88,7 +88,7 @@
       <div class="container">
         <div class="row no-gutters slider-text align-items-end">
           <div class="col-md-9 ftco-animate pb-5">
-          	<p class="breadcrumbs mb-2"><span class="mr-2"><a href="../index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Contact us <i class="ion-ios-arrow-forward"></i></span></p>
+          	<p class="breadcrumbs mb-2"><span class="mr-2"><a href="https://www.weightlossandhealthmotivation.com/">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Contact us <i class="ion-ios-arrow-forward"></i></span></p>
             <h1 class="mb-0 bread">Contact us</h1>
           </div>
         </div>
@@ -167,7 +167,7 @@
 					        			<span class="fa fa-paper-plane"></span>
 					        		</div>
 					        		<div class="text pl-3">
-						            <p><span>Email:</span> <a href="mailto:support@weightlossandhealthmotivation.com">support@weightlossandhealthmotivation.com</a></p>
+						            <p><span>Email:</span> <a href="mailto:gilbeltelnino@weightlossandhealthmotivation.com">gilbeltelnino@weightlossand<br>healthmotivation.com</a></p>
 						          </div>
 								</div>
 				          </div>
@@ -219,7 +219,7 @@
 			  <div class="row">
 				<div class="col-md-12 col-lg-8 mb-md-0 mb-4">
 				  <h2 class="footer-heading">
-					<a href="../index.html"><span><img src="../images/my-logo1.png" alt="logo" class="img-logo"></span></a>
+					<a href="https://www.weightlossandhealthmotivation.com/"><span><img src="../images/my-logo1.png" alt="logo" class="img-logo"></span></a>
 				  </h2>
 				  <p>He who has health has hope; and he who has hope has everything. </p>
 				  
