--- a/ui/html/subscribe-success.html
+++ b/ui/html/subscribe-success.html
@@ -150,7 +150,7 @@
           <a
             class="navbar-brand"
             title="weight loss and health motivation"
-            href="index.html"
+            href="https://www.weightlossandhealthmotivation.com/"
             ><span
               ><img
                 src="../images/my-logo1.png"
@@ -172,7 +172,7 @@
         <div class="collapse navbar-collapse" id="ftco-nav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a href="../index.html" class="nav-link">Home</a>
+              <a href="https://www.weightlossandhealthmotivation.com/" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
               <a href="about.html" class="nav-link">About</a>
@@ -253,7 +253,7 @@
             <div class="row">
               <div class="col-md-12 col-lg-8 mb-md-0 mb-4">
                 <h2 class="footer-heading">
-                  <a href="../index.html"
+                  <a href="https://www.weightlossandhealthmotivation.com/"
                     ><img
                       src="../images/my-logo1.png"
                       alt="logo"
