--- a/ui/html/terms-and-condition.html
+++ b/ui/html/terms-and-condition.html
@@ -149,7 +149,7 @@
           <a
             class="navbar-brand"
             title="weight loss and health motivation"
-            href="index.html"
+            href="https://www.weightlossandhealthmotivation.com/"
             ><img src="../images/my-logo1.png" alt="logo" class="img-logo"
           /></a>
           <button
@@ -167,7 +167,7 @@
         <div class="collapse navbar-collapse" id="ftco-nav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a href="../index.html" class="nav-link">Home</a>
+              <a href=".https://www.weightlossandhealthmotivation.com/" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
               <a href="./about.html" class="nav-link">About</a>
@@ -191,12 +191,23 @@
         Welcome to <b>weight loss and health motivation</b> (“Company”, “we”,
         “our”, “us”)!
       </p>
-      <p>
+      <p class="desktop">
         These Terms of Service (“Terms”, “Terms of Service”) govern your use of
         our website located at
         <b
           ><a href="https://www.weightlossandhealthmotivation.com/"
             >https://www.weightlossandhealthmotivation.com/</a
+          ></b
+        >
+        (together or individually “Service”) operated by
+        <b>weight loss and health motivation</b>.
+      </p>
+      <p class="mobile">
+        These Terms of Service (“Terms”, “Terms of Service”) govern your use of
+        our website located at
+        <b
+          ><a href="https://www.weightlossandhealthmotivation.com/"
+            >https://www.weightlossandhealthmotivation<br>.com/</a
           ></b
         >
         (together or individually “Service”) operated by
@@ -212,7 +223,7 @@
         (“Agreements”). You acknowledge that you have read and understood
         Agreements, and agree to be bound of them.
       </p>
-      <p>
+      <p class="desktop">
         If you do not agree with (or cannot comply with) Agreements, then you
         may not use the Service, but please let us know by emailing at
         <b
@@ -222,8 +233,18 @@
         >.so we can try to find a solution. These Terms apply to all visitors,
         users and others who wish to access or use Service.
       </p>
+      <p class="mobile">
+        If you do not agree with (or cannot comply with) Agreements, then you
+        may not use the Service, but please let us know by emailing at
+        <b
+          ><a href="mailto:support@weightlossandhealthmotivation.com"
+            >support@weightlossandhealthmotivation<br>.com</a
+          ></b
+        >.so we can try to find a solution. These Terms apply to all visitors,
+        users and others who wish to access or use Service.
+      </p>
       <p>2. <b>Communications</b></p>
-      <p>
+      <p class="desktop">
         By using our Service, you agree to subscribe to newsletters, marketing
         or promotional materials and other information we may send. However, you
         may opt out of receiving any, or all, of these communications from us by
@@ -231,6 +252,17 @@
         <b
           ><a href="mailto:support@weightlossandhealthmotivation.com"
             >support@weightlossandhealthmotivation.com</a
+          ></b
+        >.
+      </p>
+      <p class="mobile">
+        By using our Service, you agree to subscribe to newsletters, marketing
+        or promotional materials and other information we may send. However, you
+        may opt out of receiving any, or all, of these communications from us by
+        following the unsubscribe link or by emailing at
+        <b
+          ><a href="mailto:support@weightlossandhealthmotivation.com"
+            >support@weightlossandhealthmotivation<br>.com</a
           ></b
         >.
       </p>
@@ -403,7 +435,7 @@
         information in your notice is accurate and that you are the copyright
         owner or authorized to act on the copyright owner’s behalf.
       </p>
-      <p>
+      <p class="desktop">
         You can contact our Copyright Agent via email at
         <b
           ><a href="mailto:support@weightlossandhealthmotivation.com"
@@ -411,12 +443,43 @@
           ></b
         >.
       </p>
+      <p class="mobile">
+        You can contact our Copyright Agent via email at
+        <b
+          ><a href="mailto:support@weightlossandhealthmotivation.com"
+            >support@weightlossandhealthmotivation<br>.com</a
+          ></b
+        >.
+      </p>
       <p>11. <b>Error Reporting and Feedback</b></p>
-      <p>
+      <p class="desktop">
         You may provide us either directly at
         <b
           ><a href="mailto:support@weightlossandhealthmotivation.com"
             >support@weightlossandhealthmotivation.com</a
+          ></b
+        >
+        or via third party sites and tools with information and feedback
+        concerning errors, suggestions for improvements, ideas, problems,
+        complaints, and other matters related to our Service (“Feedback”). You
+        acknowledge and agree that: (i) you shall not retain, acquire or assert
+        any intellectual property right or other right, title or interest in or
+        to the Feedback; (ii) Company may have development ideas similar to the
+        Feedback; (iii) Feedback does not contain confidential information or
+        proprietary information from you or any third party; and (iv) Company is
+        not under any obligation of confidentiality with respect to the
+        Feedback. In the event the transfer of the ownership to the Feedback is
+        not possible due to applicable mandatory laws, you grant Company and its
+        affiliates an exclusive, transferable, irrevocable, free-of-charge,
+        sub-licensable, unlimited and perpetual right to use (including copy,
+        modify, create derivative works, publish, distribute and commercialize)
+        Feedback in any manner and for any purpose.
+      </p>
+      <p class="mobile">
+        You may provide us either directly at
+        <b
+          ><a href="mailto:support@weightlossandhealthmotivation.com"
+            >support@weightlossandhealthmotivation<br>.com</a
           ></b
         >
         or via third party sites and tools with information and feedback
@@ -597,12 +660,21 @@
         YOU HAVE READ THESE TERMS OF SERVICE AND AGREE TO BE BOUND BY THEM.
       </p>
       <p>21. <b>Contact Us</b></p>
-      <p>
+      <p class="desktop">
         Please send your feedback, comments, requests for technical support by
         email:
         <b
           ><a href="mailto:support@weightlossandhealthmotivation.com"
             >support@weightlossandhealthmotivation.com</a
+          ></b
+        >.
+      </p>
+      <p class="mobile">
+        Please send your feedback, comments, requests for technical support by
+        email:
+        <b
+          ><a href="mailto:support@weightlossandhealthmotivation.com"
+            >support@weightlossandhealthmotivation<br>.com</a
           ></b
         >.
       </p>
@@ -654,7 +726,7 @@
             <div class="row">
               <div class="col-md-12 col-lg-8 mb-md-0 mb-4">
                 <h2 class="footer-heading">
-                  <a href="../index.html"
+                  <a href="https://www.weightlossandhealthmotivation.com/"
                     ><span
                       ><img
                         src="../images/my-logo1.png"
