--- a/ui/index.html
+++ b/ui/index.html
@@ -161,7 +161,7 @@
           <a
             class="navbar-brand"
             title="weight loss and health motivation"
-            href="index.html"
+            href="https://www.weightlossandhealthmotivation.com/"
             ><span
               ><img
                 src="./images/my-logo1.png"
@@ -183,7 +183,7 @@
         <div class="collapse navbar-collapse" id="ftco-nav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a href="index.html" class="nav-link">Home</a>
+              <a href="https://www.weightlossandhealthmotivation.com/" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
               <a href="./html/about.html" class="nav-link">About</a>
