adding new headline in resurge page

--- a/ui/html/resurge-review.html
+++ b/ui/html/resurge-review.html
@@ -15,7 +15,9 @@
     <header class="wrap">
       <div class="container">
         <div class="title">
-          <a href="https://www.weightlossandhealthmotivation.com/" title="weight loss and health motivation"
+          <a
+            href="https://www.weightlossandhealthmotivation.com/"
+            title="weight loss and health motivation"
             ><img
               src="../images/my-logo1.png"
               alt="weight loss and health motivation logo"
@@ -24,7 +26,9 @@
         </div>
         <section class="header-grid">
           <div class="headline">
-            <h1>Discover How To Shrink Your Belly While You Sleep</h1>
+            <h1>
+              Do This 1 hour before bed to pee out stubborn fat in the morning
+            </h1>
             <div class="link">
               <a
                 href="https://113daajie1mn2n8lml8fh8ap8x.hop.clickbank.net/"
@@ -44,12 +48,12 @@
     </header>
     <section class="intro container">
       <p>
-        Could it really be possible to start melting away pounds of belly fat
-        while you sleep? Well, there's a 2 minute evening ritual proven to do
-        just that... And it does so WITHOUT any need to diet, starve yourself or
-        perform any kind of exhaustive exercise whatsoever. It's incredibly
-        simple yet shockingly effective... And it works especially well for
-        women and men over the age of 40.
+        Recent studies are now showing how a simple tweak to your bedtime ritual
+        can have dramatic effects in shrinking fat tissue while reversing the
+        signs of premature biological aging every time you fall asleep. In fact,
+        Lisa used this 2 minute hack to finally rid herself of 62 lbs of baby
+        weight, which not only resulted in a reversal of Type 2 Diabetes, but
+        also forced her to buy a whole new wardrobe!
       </p>
     </section>
     <section class="description">
