adding quality image and change some style

--- a/ui/html/disclaimer.html
+++ b/ui/html/disclaimer.html
@@ -4,98 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-      rel="preload"
       href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap"
-      as="style"
-      onload="this.onload=null;this.rel='stylesheet'"
+      rel="stylesheet"
     />
-    <noscript
-      ><link
-        rel="stylesheet"
-        href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap"
-    /></noscript>
+    <link rel="stylesheet" href="../icons asset/css/all.min.css">
+    <link rel="stylesheet" href="../css/animate.css" />
 
-    <link
-      rel="preload"
-      href="../icons asset/css/all.min.css"
-      as="style"
-      onload="this.onload=null;this.rel='stylesheet'"
-    />
-    <noscript
-      ><link rel="stylesheet" href="../icons asset/css/all.min.css"
-    /></noscript>
+    <link rel="stylesheet" href="../css/owl.carousel.min.css" />
+    <link rel="stylesheet" href="../css/owl.theme.default.min.css" />
+    <link rel="stylesheet" href="../css/magnific-popup.css" />
 
-    <link
-      rel="preload"
-      href="../css/animate.css"
-      as="style"
-      onload="this.onload=null;this.rel='stylesheet'"
-    />
-    <noscript><link rel="stylesheet" href="../css/animate.css" /></noscript>
+    <link rel="stylesheet" href="../css/bootstrap-datepicker.css" />
+    <link rel="stylesheet" href="../css/jquery.timepicker.css" />
 
-    <link
-      rel="preload"
-      href="../css/owl.carousel.min.css"
-      as="style"
-      onload="this.onload=null;this.rel='stylesheet'"
-    />
-    <noscript
-      ><link rel="stylesheet" href="../css/owl.carousel.min.css"
-    /></noscript>
-
-    <link
-      rel="preload"
-      href="../css/owl.theme.default.min.css"
-      as="style"
-      onload="this.onload=null;this.rel='stylesheet'"
-    />
-    <noscript
-      ><link rel="stylesheet" href="../css/owl.theme.default.min.css"
-    /></noscript>
-    <link
-      rel="preload"
-      href="../css/magnific-popup.css"
-      as="style"
-      onload="this.onload=null;this.rel='stylesheet'"
-    />
-    <noscript
-      ><link rel="stylesheet" href="../css/magnific-popup.css"
-    /></noscript>
-
-    <link
-      rel="preload"
-      href="../css/bootstrap-datepicker.css"
-      as="style"
-      onload="this.onload=null;this.rel='stylesheet'"
-    />
-    <noscript
-      ><link rel="stylesheet" href="../css/bootstrap-datepicker.css"
-    /></noscript>
-
-    <link
-      rel="preload"
-      href="../css/jquery.timepicker.css"
-      as="style"
-      onload="this.onload=null;this.rel='stylesheet'"
-    />
-    <noscript
-      ><link rel="stylesheet" href="../css/jquery.timepicker.css"
-    /></noscript>
-
-    <link
-      rel="preload"
-      href="../css/flaticon.css"
-      as="style"
-      onload="this.onload=null;this.rel='stylesheet'"
-    />
-    <noscript><link rel="stylesheet" href="../css/flaticon.css" /></noscript>
-    <link
-      rel="preload"
-      href="../css/style.css"
-      as="style"
-      onload="this.onload=null;this.rel='stylesheet'"
-    />
-    <noscript><link rel="stylesheet" href="../css/style.css" /></noscript>
+    <link rel="stylesheet" href="../css/flaticon.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>Disclaimer | weight loss and health motivation</title>
   </head>
   <body>
