--- a/ui/html/contact.html
+++ b/ui/html/contact.html
@@ -6,33 +6,22 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="author" content="Gilbert Elnino" />
 	<meta name="description" content="The weight loss and health motivation aims to provide complete beginners to healthy life with all they need to know to get started with good meal plan, workout strategy and weight loss inspiration and motivation" />
-	<link rel="preload" href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap"></noscript>
+	<link
+      href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../icons asset/css/all.min.css">
+    <link rel="stylesheet" href="../css/animate.css" />
 
-	<link rel="preload" href="../icons asset/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="../icons asset/css/all.min.css" /></noscript>
- 
-    <link rel="preload" href="../css/animate.css" as="style" onload="this.onload=null;this.rel='stylesheet'"/>
-    <noscript><link rel="stylesheet" href="../css/animate.css"></noscript>
-    
-	<link rel="preload" href="../css/owl.carousel.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<noscript><link rel="stylesheet" href="../css/owl.carousel.min.css"></noscript>
+    <link rel="stylesheet" href="../css/owl.carousel.min.css" />
+    <link rel="stylesheet" href="../css/owl.theme.default.min.css" />
+    <link rel="stylesheet" href="../css/magnific-popup.css" />
 
-	<link rel="preload" href="../css/owl.theme.default.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<noscript><link rel="stylesheet" href="../css/owl.theme.default.min.css"></noscript>
-	<link rel="preload" href="../css/magnific-popup.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<noscript><link rel="stylesheet" href="../css/magnific-popup.css"></noscript>
+    <link rel="stylesheet" href="../css/bootstrap-datepicker.css" />
+    <link rel="stylesheet" href="../css/jquery.timepicker.css" />
 
-	<link rel="preload" href="../css/bootstrap-datepicker.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<noscript><link rel="stylesheet" href="../css/bootstrap-datepicker.css"></noscript>
-
-	<link rel="preload" href="../css/jquery.timepicker.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<noscript><link rel="stylesheet" href="../css/jquery.timepicker.css"></noscript>
-
-	<link rel="preload" href="../css/flaticon.css" as="style" onload="this.onload=null;this.rel='stylesheet'"/>
-	<noscript><link rel="stylesheet" href="../css/flaticon.css"></noscript>
-	<link rel="preload" href="../css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<noscript><link rel="stylesheet" href="../css/style.css"></noscript>
+    <link rel="stylesheet" href="../css/flaticon.css" />
+    <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
 		<div class="wrap">
@@ -83,7 +72,7 @@
 	  </nav>
     <!-- END nav -->
 
-    <section class="hero-wrap hero-wrap-2" style="background-image: url('../images/weight-loss-fruit-should-you-take.jp'); background-color: #6e6e6e;" data-stellar-background-ratio="0.5">
+    <section class="hero-wrap hero-wrap-2" style="background-image: url('../images/weight-loss-fruit-should-you-take.jpg'); background-color: #6e6e6e;" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text align-items-end">
