updating resurge supplement review page

--- a/ui/html/resurge-review.html
+++ b/ui/html/resurge-review.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="buy resurge supplement on This Massive Discount & Exclusive Bonuses. resurge supplement review">
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap"
       rel="stylesheet"
@@ -27,8 +28,9 @@
         <section class="header-grid">
           <div class="headline">
             <h1>
-              Do This 1 hour before bed to pee out stubborn fat in the morning
+              what is resurge Supplement?
             </h1>
+            <p>The Resurge Supplement is a weight loss pills like no other. This can address weight loss problems by improving sleep deprivation, which is the reason behind Weight Gain.</p>
             <div class="link">
               <a
                 href="https://113daajie1mn2n8lml8fh8ap8x.hop.clickbank.net/"
@@ -46,32 +48,19 @@
         </section>
       </div>
     </header>
-    <section class="intro container">
-      <p>
-        Recent studies are now showing how a simple tweak to your bedtime ritual
-        can have dramatic effects in shrinking fat tissue while reversing the
-        signs of premature biological aging every time you fall asleep. In fact,
-        Lisa used this 2 minute hack to finally rid herself of 62 lbs of baby
-        weight, which not only resulted in a reversal of Type 2 Diabetes, but
-        also forced her to buy a whole new wardrobe!
-      </p>
-    </section>
     <section class="description">
       <div class="desc container">
-        <h1 class="show-mobile headline-title">what is resurge Supplement</h1>
+        <h1 class="show-mobile headline-title">how does resurge Supplement works?</h1>
         <img
           src="../images/Resurge 6 Bottles Best Value.png"
           alt="resurge supplement 6 bottles"
         />
         <div class="detail">
           <h1 class="show-desktop headline-title">
-            what is resurge Supplement
+            how does resurge Supplement works?
           </h1>
           <p>
-            Resurge is a weight loss supplement that helps you lose weight
-            naturally by addressing the root cause of weight gain, sleep
-            deprivation. By restoring deep sleep, ensures proper functioning of
-            fat-burning hormones leading to weight loss
+            Resurge is an effective natural supplement that works from the inside, helping you lose weight. By consuming Resurge supplements you will be able to get a deep sleep that will lead to fat burning. This supplement should be taken every evening after dinner to give you a refreshing and necessary sleep for well-being.
           </p>
           <a
             href="https://113daajie1mn2n8lml8fh8ap8x.hop.clickbank.net/"
@@ -83,39 +72,35 @@
     </section>
     <section class="how-it-work container">
       <div class="detail">
-        <h1 class="headline-title">how does resurge works?</h1>
+        <h1 class="headline-title">How is this possible?</h1>
         <p>
-          Resurge supplement is a natural product made up of unique ingredients
-          that will repair and reverse health issues such as visceral fat, rapid
-          aging, lethargy. It is the world’s first fat burning and sleep
-          creating supplement.
+          Resurge is a revolutionary supplement that manages to activate the power of metabolism. Even if you sleep you will burn calories and gain more energy, you will sleep better at night and you will have a much stronger psychic.
         </p>
         <p>
-          The unique composition of the product and the correct proportion of
-          ingredients helps to activate the weight loss hormone that is produced
-          during deep sleep. Resurge is the only anti-aging nutritional protocol
-          that cures the unexplained weight gain, stubborn belly fat, and
-          metabolic slowdown.
-        </p>
-        <p>
-          According to Resurge review, it functions on the basic idea that our
-          bodies have self-repairing and rejuvenating capabilities without any
-          kind of external intervention. This self-repairing is said to happen
-          only when we enjoy a good quality deep sleep state for a good
-          duration.
-        </p>
-        <p>
-          Acquiring this deep state of relaxation during sleep not only helps to
-          burn fat but also reverses all ill effects your body has endured due
-          to the lack of sleep. Resurge supplement contains 8 special nutrients,
-          discussed previously in the exact amount that scientifically proven to
-          improve deep sleep and enhance natural metabolic regeneration in both
-          women and men.
+          This Resurge supplement is incredibly useful and improves all the plans of your life, shaping your body, strengthening your mind and giving you all the energy you need to be able to face the challenges.
         </p>
         <a
           href="https://113daajie1mn2n8lml8fh8ap8x.hop.clickbank.net/"
           class="btn-danger"
           >learn more</a
+        >
+      </div>
+      <div class="detail">
+        <h1 class="headline-title">Why Should You Buy Resurge?</h1>
+        <p>
+          Resurge is a product that helps you focus a lot better.
+        </p>
+        <p>
+          Gain more confidence and develop a high concentration power.
+        </p>
+        <p>Reduces food addiction.</p>
+        <p>You benefit from 60 days money back guarantee if the product did not satisfy you.</p>
+        <p>It has an affordable price</p>
+        <p>It is easy to use and consume</p>
+        <a
+          href="https://113daajie1mn2n8lml8fh8ap8x.hop.clickbank.net/"
+          class="btn-danger action-btn"
+          >testimonials from official site</a
         >
       </div>
     </section>
@@ -141,7 +126,9 @@
             You take advantages of 60 days money back guarantee if the product
             did not satisfy you.
           </li>
-          <li>Gain more confidence and develop a high concentration power.</li>
+          <li>The product offers a feeling of relaxation in the morning by significantly improving sleep</li>
+          <li>You will benefit from a much deeper sleep</li>
+          <li>Resurge balances hormonal imbalances</li>
         </ul>
         <a
           href="https://113daajie1mn2n8lml8fh8ap8x.hop.clickbank.net/"
