fixing resurge page button

--- a/ui/html/resurge-review.html
+++ b/ui/html/resurge-review.html
@@ -100,7 +100,7 @@
         <a
           href="https://113daajie1mn2n8lml8fh8ap8x.hop.clickbank.net/"
           class="btn-danger action-btn"
-          >testimonials from official site</a
+          >VIEW RESURGE FAQs</a
         >
       </div>
     </section>
