--- a/ui/html/resurge-review.html
+++ b/ui/html/resurge-review.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="buy resurge supplement on This Massive Discount & Exclusive Bonuses. resurge supplement review">
+    <meta name="description" content="lose stubborn belly fat while you are sleep">
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap"
       rel="stylesheet"
