adding social media link

--- a/ui/html/resurge-review.html
+++ b/ui/html/resurge-review.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="lose stubborn belly fat while you are sleep">
+    <meta property="og:image" content="../images/Resurge 3 Bottles Most Popular.png">
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap"
       rel="stylesheet"
